--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,15 @@
     <string name="car_charging">Car Charging Station</string>
     <string name="movie_info">Movie Information</string>
     <string name="soccer_game">Soccer Games Api</string>
+    <string name="latitudeInput">Enter latitude</string>
+    <string name="latitude">Latitude: </string>
+    <string name="longitude">Longitude: </string>
+    <string name="longitudeInput">Enter longitude</string>
+    <string name="searchButton">Search</string>
+    <string name="title">Location Title</string>
+    <string name="phone">Contact Telephone Number</string>
+    <string name="loadMap">Load Directions In Google Maps</string>
+    <string name="add">Add To Favourites</string>
+    <string name="listOfFavourites">See List Of Favourite Stations</string>
+    <string name="deleteButton">Delete</string>
 </resources>
