--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="car_charging">Car Charging Station</string>
     <string name="movie_info">Movie Information</string>
     <string name="soccer_game">Soccer Games Api</string>
+    <string name="editText">Please enter the bus stop number </string>
+    <string name="search_bar">SEARCH</string>
+    <string name="history_bar">HISTROIES</string>
+    <string name="help_bar">HELP</string>
+
 </resources>
