MovieInformation use NavigationDrawer step1

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -20,6 +20,8 @@
     <!-- Movie_info_record.xml button text -->
     <string name="question">问题</string>
     <string name="Feedback">反馈</string>
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
 
 
 
