MovieInformation use NavigationDrawer step3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="Help">Help</string>
     <string name="Favorites">Favorites</string>
     <string name="Detail">Detail</string>
-    <string name="searchTeater">earchTeater</string>
+    <string name="searchTeater">Search Teater</string>
     <string name="TheaterTel">TheaterTel</string>
     <string name="delBtn">Delete</string>
     <string name="Close">Close</string>
