--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">HHSRAndroidProject1</string>
+    <string name="app_name">HHSR应用</string>
     <string name="bus">公交信息</string>
     <string name="car_charging">汽车充电站</string>
     <string name="movie_info">电影信息</string>
     <string name="soccer_game">足球比赛</string>
-    <string name="editText">请输入站牌号码</string>
+    <string name="oct_header">渥太华公车系统</string>
+    <string name="search_edit_text">请输入站牌号码</string>
     <string name="search_bar">搜索</string>
-    <string name="history_bar">历史记录</string>
     <string name="help_bar">帮助</string>
+    <string name="returnButtonOCt">返回上一页</string>
+    <string name="favouritesButton">收藏夹</string>
+    <string name="returnButtonStation">返回上一页</string>
+    <string name="favouritesTitle">我的收藏</string>
+    <string name="favouritesRerun">返回</string>
 </resources>
