--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,4 +14,11 @@
     <string name="returnButtonStation">返回上一页</string>
     <string name="favouritesTitle">我的收藏</string>
     <string name="favouritesRerun">返回</string>
+    <string name="navigation_title"> 渥太华公车系统应用</string>
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
+    <string name="author"> 付容</string>
+    <string name="version"> 版本 1.0</string>
+    <string name="id_favorites">收藏夹</string>
+    <string name="id_search">查找线路</string>
 </resources>
