--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="movie_info">Movie Information</string>
     <string name="soccer_game">Soccer Games Api</string>
     <string name="oct_header">OC Transpo</string>
-    <string name="station_detail_header"> </string>
     <string name="search_edit_text">Please enter the bus stop number </string>
     <string name="search_bar">SEARCH</string>
     <string name="help_bar">HELP</string>
@@ -14,5 +13,12 @@
     <string name="returnButtonStation">Return</string>
     <string name="favouritesTitle">Favorites</string>
     <string name="favouritesRerun">Return</string>
+    <string name="navigation_title"> OC Transpo App</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="author"> Rong Fu</string>
+    <string name="version"> Version 1.0</string>
+    <string name="id_favorites">Favourites</string>
+    <string name="id_search">Search</string>
 
 </resources>
