--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,19 +6,20 @@
     <string name="movie_info">电影信息</string>
     <string name="soccer_game">足球比赛</string>
     <string name="oct_header">渥太华公车系统</string>
-    <string name="search_edit_text">请输入站牌号码</string>
-    <string name="search_bar">搜索</string>
-    <string name="help_bar">帮助</string>
+    <string name="search_stop">请输入站牌号码</string>
+    <string name="oct_search_bar">搜索</string>
+    <string name="oct_help_bar">帮助</string>
     <string name="returnButtonOCt">返回上一页</string>
-    <string name="favouritesButton">收藏夹</string>
-    <string name="returnButtonStation">返回上一页</string>
-    <string name="favouritesTitle">我的收藏</string>
-    <string name="favouritesRerun">返回</string>
-    <string name="navigation_title"> 渥太华公车系统应用</string>
-    <string name="open">打开</string>
-    <string name="close">关闭</string>
-    <string name="author"> 付容</string>
-    <string name="version"> 版本 1.0</string>
-    <string name="id_favorites">收藏夹</string>
-    <string name="id_search">查找线路</string>
+    <string name="favouritesButtonOct">收藏夹</string>
+    <string name="oct_returnButtonStation">返回上一页</string>
+    <string name="oct_favouritesTitle">我的收藏</string>
+    <string name="oct_favouritesRerun">返回</string>
+    <string name="oct_navigation_title"> 渥太华公车系统应用</string>
+    <string name="oct_open">打开</string>
+    <string name="oct_close">关闭</string>
+    <string name="oct_author"> 付容</string>
+    <string name="oct_version"> 版本 1.0</string>
+    <string name="id_favorites_oct">收藏夹</string>
+    <string name="id_search_oct">查找线路</string>
+    <string name="id_main_from_oct">主页</string>
 </resources>
