MovieInformation use NavigationDrawer step7

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -23,9 +23,7 @@
     <string name="open">打开</string>
 
     <string name="close">关闭</string>
-
-
-
+    <string name="getMovie">获得电影信息</string>
 
 
 </resources>
