--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,15 +12,15 @@
     <string name="LoginMovie">登录电影</string>
     <string name="Help">帮助</string>
     <string name="FavoritesMovie">收藏电影</string>
-    <string name="DetailMovie">电影细节</string>
+
     <!-- Movie_saved.xml button text -->
     <string name="searchTeater">搜索影院</string>
     <string name="TheaterTel">影院电话</string>
     <string name="delBtnMovie">删除</string>
     <string name="CloseMovie">关闭</string>
     <!-- Movie_info_record.xml button text -->
-    <string name="questionMovie">问题</string>
-    <string name="FeedbackMovie">反馈</string>
+    <string name="addMovieInfo">添加电影</string>
+    <string name="addActorName">添加演员名字</string>
     <string name="open">打开</string>
 
     <string name="close">关闭</string>
