--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,6 @@
 
     <!-- Movie Information App button text -->
 
-    <string name="Help">Help</string>
-
 
     <string name="searchTeater">Search Teater</string>
     <string name="TheaterTel">TheaterTel</string>
@@ -27,7 +25,8 @@
 
 
     <string name="addMovieInfo">Add Movie</string>
-    <string name="addActorName">Add Actor Name</string>
+    <string name="addActorName">Add Actor</string>
+    <string name="newMovieBtn">New Movies</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
