--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
 
     <string name="addMovieInfo">Add Movie</string>
     <string name="addActorName">Add Actor</string>
-    <string name="newMovieBtn">New Movies</string>
+    <string name="newMovieBtn">Add Favorite Movies</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
