--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,12 +15,13 @@
     <string name="phone">电话</string>
     <string name="loadMap">谷歌地图</string>
     <string name="add">添加到喜欢列表</string>
-    <string name="listOfFavourites">See List Of Favourite Stations</string>
+    <string name="listOfFavourites">喜欢列表</string>
     <string name="deleteButton">删除</string>
     <string name="charging_introduction">作者：吕慧 版本：1.0</string>
     <string name="open">打开</string>
     <string name="close">关闭</string>
-
+    <string name="home">主页</string>
+    <string name="help">帮助</string>
 
     <string name="oct_header">渥太华公车系统</string>
     <string name="search_stop">请输入站牌号码</string>
