MovieInformation finished milestone 3_6

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -69,6 +69,7 @@
     <string name="newMovieBtn">最新电影</string>
 
     <string name="getMovie">获得电影信息</string>
-
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
 
 </resources>
